Revert "Remove 400px media query rule for .wrap to try to fix right padding."
This reverts commit c021d57bb8a286a66c8def706fe4ba3617825011.

--- a/stylesheets/screen.css
+++ b/stylesheets/screen.css
@@ -376,4 +376,7 @@ iframe {
     font-size: 3em;
   }
 
+  .wrap {
+    width: 90%;
+  }
 }
